# deepracer-core

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  buildspec.yml  config.yaml  docker-compose.yml  dr_util.py  init.sh  install-steps.sh  minio.sh  pip.in.conf  robomaker.env  robomaker_run_env.dump  rootfirst.pem.crt  rootlast.pem.crt  run.sh
robomaker-container/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/: CMakeLists.txt  package.dsv  package.ps1  package.sh  package.xml
robomaker-container/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/cmake/: deepracer_simulation_environment-msg-extras.cmake  deepracer_simulation_environment-msg-paths.cmake  deepracer_simulation_environmentConfig.cmake
robomaker-container/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/config/: deepracer_rpi_h264_encoder_config.yaml  deepracer_stream_config.yaml
robomaker-container/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/launch/: distributed_training.launch  evaluation.launch  evaluation_rl_agent.launch  h264_video_encoder.launch  local_training.launch  racecar.launch  racecar_control.launch  racetrack_with_racecar.launch  rollout_rl_agent.launch
robomaker-container/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/scripts/: car_node.py  download_params_and_roslaunch_agent.py  kinesis_video_camera_node.py  run_rollout_rl_agent.sh  servo_commands.py  visualization_node.py
robomaker-container/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/worlds/: Canada_Training.world  Virtual_May19_Train_track.world  hard_speed_track.world  reInvent2019_wide_mirrored.world
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/: CMakeLists.txt  New_York_Track.world  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/cmake/: deepracer_simulation_environment-msg-extras.cmake  deepracer_simulation_environment-msg-paths.cmake  deepracer_simulation_environmentConfig.cmake
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/config/: deepracer_node_config.yaml  deepracer_rpi_h264_encoder_config.yaml  racecar_control.yaml
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/hook/: python2path.dsv  python2path.ps1  python2path.sh
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/include/: GetWaypointSrv.h  GetWaypointSrvRequest.h  GetWaypointSrvResponse.h  ResetCarSrv.h  ResetCarSrvRequest.h  ResetCarSrvResponse.h
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/launch/: distributed_training.launch  evaluation.launch  evaluation_rl_agent.launch  h264_video_encoder.launch  kinesis_video_streamer.launch  launch_world.launch  local_training.launch  only_sleep.launch  racecar.launch  racecar_control.launch  racetrack_with_racecar.launch  rollout_rl_agent.launch
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/meshes/: chassis.dae  left_front_wheel.dae  left_rear_wheel.dae  left_steering_hinge.dae  racetrack.world
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/msg/: AgentRewardData.msg
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/scripts/: car_node.py  only_sleep.sh  rotation.py  run_evaluation_rl_agent.sh  run_local_rl_agent.sh  run_rollout_rl_agent.sh
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/srv/: GetWaypointSrv.srv  ResetCarSrv.srv
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/urdf/: macros.xacro  materials.xacro  racecar.gazebo  racecar.xacro
simulation/aws-robomaker-sample-application-deepracer/simulation_ws/src/deepracer_simulation/worlds/: AWS_track.world  Bowtie_track.world  Canada_Training.world  China_track.world  Mexico_track.world  Oval_track.world  Straight_track.world  Tokyo_Training_track.world  Tokyo_Training_track_original.world  Vegas_track.world  easy_track.world  hard_loopy_track.world  hard_track.world  medium_track.world  reInvent2019_track.world  reInvent2019_wide.world  reinvent_base.world  reinvent_base_jeremiah.world  (+3 more)
(+456 files in other folders)
